<resources>
    <string name="app_name">AndroidTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tab_today">Today</string>
    <string name="tab_tomorrow">Tomorrow</string>
    <string name="tab_next_seven_days">Next seven days</string>
    <string name="tab_after_next_seven_days">After</string>

    <string name="menu_personal">Personal</string>
    <string name="menu_project">Project</string>
    <string name="menu_other">Other</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="cant_create_reminder_toast">Can\'t create a reminder, please fill all input</string>
    <string name="cant_create_notif_toast">Can\'t create a notification, please fill all input</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_reminder">EditReminderActivity</string>
</resources>
