<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_personal">

    <fragment
        android:id="@+id/nav_personal"
        android:name="utt.if26.androidtask.ui.personnal.PersonalFragment"
        android:label="@string/menu_personal"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/nav_project"
        android:name="utt.if26.androidtask.ui.project.ProjectFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/nav_other"
        android:name="utt.if26.androidtask.ui.other.OtherFragment"
        android:label="@string/menu_other"
        tools:layout="@layout/fragment_other" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="utt.if26.androidtask.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="utt.if26.androidtask.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="utt.if26.androidtask.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>